Update tooltip wellpanel. Fix chart 2 title to maintain vertical alignment. Trim payable law to payable and scheduled law to scheduled.

--- a/www/shiny.css
+++ b/www/shiny.css
@@ -6,7 +6,7 @@ h4 {
   color: #000000;
 }
 
-h5 {
+h5, .h5 {
   margin: 0;
 }
 
